fixes spacing problems on editor page and new state-container class prevents conflicts with bootstrap container class

--- a/browser/scss/editor/main.scss
+++ b/browser/scss/editor/main.scss
@@ -6,7 +6,7 @@
 
     /* added by ESF */
     display: block;
-    border: 2px solid rgba(0,0,0,0.15);
+    border: 1px solid rgba(0,0,0,0.15);
     border-bottom-color: rgba(0,0,0,0.25);
     box-shadow: 0 1px 1px rgba(0,0,0,0.06);
     background-color: #fff;
@@ -40,7 +40,7 @@
 }
 
 .scenes {
-    width: 30%;
+    width: 33%;
     background: pink;
 }
 
@@ -55,12 +55,13 @@
 }
 
 .outer-editor {
+    padding-right: 0px;
     /*border: 10px solid black;*/
     display: flex;
     /*flex: 1 1 auto;*/
     /*flex-direction: row;*/
     justify-content: space-between;
-    width: 90%;
+    width: 100%;
     background-color: grey;
 }
 
