--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -19,8 +19,10 @@ main {
   margin: 0 auto;
 }
 
-.container {
+.state-container {
   padding-top: 120px;
+  width: 91%;
+  margin: 0 auto;
 }
 
 @import 'directives/main';
